--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
     <nav class="navbar">
         <div class="nav_link_container">
-            <div class="nav_links" id="work">work</div> 
+            <div class="nav_links" id="work">works</div> 
             <div class="nav_link_pointer "></div>
         </div>
         <div class="nav_link_container">
